# pdf22png

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PLAN.md  PROGRESS.md  Package.swift  README.html  README.md  TODO.md  bench.sh  build.sh  llms.txt  pdf22png.m  release.sh  test_both.sh
.cursor/rules/: batch-processing-architecture.mdc  pdf-rendering-pipeline.mdc  scaling-algorithms.mdc
.giga/: specifications.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-comment.yml  benchmark-history.yml  benchmark.yml  build.yml  release.yml  update-homebrew.yml
.specstory/history/: 2025-06-22_21-30-detailed-plan-for-code-porting-to-swift.md  2025-06-25_16-15-compare-objc-and-swift-source-quality.md  2025-06-25_22-01-improve-issues-from-project-documents.md  2025-06-27_14-18-improve-issues-from-project-documents.md
Tests/: test-framework.swift
Tests/CLITests/: ArgumentParserTests.swift
Tests/CoreTests/: MemoryManagerTests.swift
Tests/UtilitiesTests/: InputValidatorTests.swift
Tests/pdf22pngTests/: pdf22pngTests.swift
benchmarks/: BENCHMARK_RESULTS.md  BenchmarkSwift.swift  README.md  benchmark.h  benchmark.m  benchmark.sh  benchmark_objc  benchmark_objc.m  benchmark_runner.m  compare_implementations.sh  create_test_pdf.py  create_test_pdf.sh  module.modulemap  run_benchmarks.sh  test_document.txt
benchmarks/results/: medium_default_20250623_134015.json  small_default_20250623_133829.json  small_highres_20250623_133853.json
docs/: API.md  BUILD.md  EXAMPLES.md  HOMEBREW_TAP.md  MIGRATION.md  RELEASE_PROCESS.md  USAGE.md  pdf21png.1  pdf22png.1
homebrew/: pdf21png.rb  pdf22png.rb
issues/: issue201.txt
pdf21png/: Makefile  README.md
pdf21png/Tests/: PDF21PNGTests.m  UtilsTests.m  run-tests.sh  run-unit-tests.sh  test_utils.c
pdf21png/src/: pdf21png.h  pdf21png.m  utils.h  utils.m
pdf22png/: Makefile  Package.swift  README.md
pdf22png-objc/: Makefile  README.md  llms.txt  utils.m
pdf22png-objc/src/: errors.h  pdf21png.h  pdf21png.m  pdf22png.h  utils.h  utils.m
pdf22png-swift/: Makefile  Package.swift  README.md  main.swift
pdf22png-swift-standalone/src/: main.swift
scripts/: build-dmg.sh  build-pkg.sh  build-universal.sh  check-memory-leaks.sh  dev-setup.sh  get-version.sh  install-deps.sh  install.sh  release.sh  setup-homebrew-tap.sh  test-objc.sh  uninstall.sh
src/: Makefile  llms.txt  pdf22png.h  pdf22png.m  utils.h  utils.m
tests/: integration_test.sh  test_pdf22png.m  test_runner.m
(+25 files in other folders)
